<resources>
    <string name="serverHost">Server Host:</string>
    <string name="serverPort">Server Port:</string>
    <string name="userName">User Name:</string>
    <string name="password">Password:</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="email">Email:</string>
    <string name="signInButton">SIGN IN</string>
    <string name="registerButton">REGISTER</string>
    <string name="mainActivity">MainActivity</string>
    <string name="app_name">My App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gender">Gender:</string>
    <string name="outputName">Persons Name: %d</string>
    <string name="title_activity_google_maps">GoogleMapsActivity</string>
    <string name="lifeEvents">Life Events</string>
    <string name="familyEvents">Family Events</string>
    <string name="lifeEventsTitle">Life Events</string>
    <string name="individualsTitle"> Family Members</string>
    <string name="familyMembersTitle">Family Members Title</string>


</resources>